# RustPlayground

./: .gitignore  Cargo.toml  README.md
ModalInputTest/: ModalInputTest-Bridging-Header.h
ModalInputTest/ModalInputTest/: AppDelegate.swift  BundleResources.swift  CompilerTask.swift  EditView.swift  EditViewController.swift  Info.plist  MainPlaygroundViewController.swift  OutputTextView.swift  OutputViewController.swift  Playground.swift  PreferencesViewController.swift  PreferencesWindowController.swift  Runner.swift  Style.swift  ViewController.swift  XiApp.swift  XiCoreProxy.swift  XiEventHandler.swift  XiWindow.swift
ModalInputTest/ModalInputTest.xcodeproj/: project.pbxproj
ModalInputTest/ModalInputTest.xcodeproj/xcshareddata/xcschemes/: ModalInputTest.xcscheme
ModalInputTest/ModalInputTest/Base.lproj/: Main.storyboard
ModalInputTest/ModalInputTestTests/: ModalInputTestTests.swift
RustPlayground/: ModalInputTest-Bridging-Header.h
RustPlayground/ModalInputTestTests/: ModalInputTestTests.swift
RustPlayground/RustPlayground/: AppDelegate.swift  CompilerTask.swift  EditView.swift  EditViewController.swift  Github.swift  MainPlaygroundViewController.swift  MissingRustupInfoView.swift  OutputViewController.swift  Playground.swift  PreferencesViewController.swift  Runner.swift  Style.swift  XiCoreProxy.swift  XiWindow.swift
RustPlayground/RustPlayground.xcodeproj/: project.pbxproj
RustPlayground/RustPlayground.xcodeproj/xcshareddata/xcschemes/: ModalInputTest.xcscheme  RustPlayground.xcscheme
RustPlayground/RustPlayground/Assets/: Info.plist
RustPlayground/RustPlayground/Assets/Base.lproj/: Main.storyboard
RustPlayground/RustPlayground/Preferences/: PreferencesViewController.swift  PreferencesWindowController.swift  SharePreferencesViewController.swift
playground-utils/: Cargo.toml
playground-utils-ffi/: Cargo.toml  playground.h
playground-utils-ffi/src/: lib.rs
playground-utils/src/: compile.rs  error.rs  lib.rs  rustup.rs  toolchain.rs
scripts/: cargo_build.sh
xi-ffi/: Cargo.toml  libximodal.h  xicore.h
xi-ffi/src/: lib.rs
xi-modal-input/: Cargo.toml  libximodal.h  xicore.h
xi-modal-input/assets/: InspiredGitHub.tmTheme
xi-modal-input/src/: callbacks.rs  core.rs  gesture.rs  highlighting.rs  input_handler.rs  lib.rs  lines.rs  mac.rs  rpc.rs  style.rs  undo.rs  update.rs  view.rs  vim.rs
(+6 files in other folders)
