[package]
name = "playground-utils-ffi"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[dependencies]
serde_json = "1.0"

[dependencies.playground-utils]
path = "../playground-utils"
version = "0.1"

[dependencies.libc]
version = "0.2.17"
default-features = false

[lib]
name = "playground"
path = "src/lib.rs"
crate-type = ["staticlib"]
