[package]
name = "xi-modal-input"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[dependencies]
serde_json = "1.0"

[dependencies.libc]
version = "0.2.17"
default-features = false

[dependencies.xi-core-lib]
path = "/Users/rofls/dev/projects/xi-mac/xi-editor/rust/core-lib"

[dependencies.xi-rope]
path = "/Users/rofls/dev/projects/xi-mac/xi-editor/rust/rope"

[lib]
name = "ximodal"
path = "src/lib.rs"
crate-type = ["staticlib"]
