[package]
name = "xi-modal-input"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.syntect]
version = "3.2"
features = ["metadata"]

[dependencies.libc]
version = "0.2.17"
default-features = false

[dependencies.xi-core-lib]
git = "https://github.com/cmyr/xi-editor.git"
branch = "xi-modal"

[dependencies.xi-rope]
git = "https://github.com/cmyr/xi-editor.git"
branch = "xi-modal"

[dependencies.xi-unicode]
git = "https://github.com/cmyr/xi-editor.git"
branch = "xi-modal"
